--- a/hugo/layouts/index.html
+++ b/hugo/layouts/index.html
@@ -3,9 +3,13 @@
 
 <div class="hero">
   <div class="hero-inner">
-    <h1 class="hero-title">Real Help Doncaster</h1>
-    <p>A local fund that helps homeless and vulnerable people off the street and into a healthier and safer lifestyle.</p>
-    <a class="button button-primary" href="#">Donate and make a change</a>
+    <h1>
+      <span class="hero-pretitle">Hero Pretitle</span>
+      <span class="hero-title">Hero Title</span>
+      <span class="hero-subtitle">Hero Subtitle</span>
+    </h1>
+    <p>Hero supporting content - not yet editable via CMS</p>
+    <a class="button button-primary" href="#">Button</a>
   </div>
 </div>
 
