--- a/templates/src/_components/footer/_footer.scss
+++ b/templates/src/_components/footer/_footer.scss
@@ -22,8 +22,8 @@
 }
 
 .footer-inner {
-  background-color: #3B3B3B;
-  background-image: url(assets/highstreet.jpg); // 1304 x 500
+  background-color: #858281;
+  background-image: url(assets/doncaster-town-centre.jpg); // 1304 x 500
   background-position: 50% 80%;
   background-size: cover;
   background-repeat: no-repeat;
