--- a/templates/src/css/sass/_variables.scss
+++ b/templates/src/css/sass/_variables.scss
@@ -91,6 +91,7 @@ $font-size-xl: ($font-size-base * 1.5555555556); // 28px
 $font-weight-base: 400;
 $font-weight-light: 300;
 $font-weight-normal: 400;
+$font-weight-medium: 400;
 $font-weight-semibold: 600;
 $font-weight-bold: 700;
 
