Use Hero Partial in templates

--- a/templates/src/_components/hero/_hero.scss
+++ b/templates/src/_components/hero/_hero.scss
@@ -70,15 +70,23 @@
 }
 
 .hero-pretitle {
-  color: $color-white;
+  color: $color-rh-yellow;
   display: block;
   font-size: 30px;
+
+  .hero-alt & {
+    color: $color-white;
+  }
 }
 
 .hero-title {
-  color: $color-rh-yellow;
+  color: $color-white;
   display: block;
   font-size: 60px;
+
+  .hero-alt & {
+    color: $color-rh-yellow;
+  }
 }
 
 .hero-subtitle {
