--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -5,17 +5,14 @@ header_nav_home: true
 ---
 {{> header header__nav=true }}
 
-<div class="hero">
-  <div class="hero-inner">
-    <h1>
-      <span class="hero-pretitle">Hero Pretitle </span>
-      <span class="hero-title">Hero Title </span>
-      <span class="hero-subtitle">Hero Subtitle </span>
-    </h1>
-    <p>Hero body ipsum dolor sit amet, consectetur adipisicing elit. Numquam, veniam.</p>
-    <a class="button button-primary" href="#">Button</a>
-  </div>
-</div>
+{{> hero
+    hero__classes="hero-alt"
+    hero__pretitle=false
+    hero__title="Real Help Doncaster"
+    hero__subtitle=false
+    hero__body="A local fund that helps homeless and vulnerable people off the street and into a healthier and safer lifestyle."
+    hero__button__text="Donate and make a change"
+}}
 
 <div id="main">
   <section class="section home-intro">
