--- a/templates/src/pages/page-getinvolved.hbs
+++ b/templates/src/pages/page-getinvolved.hbs
@@ -5,6 +5,15 @@ header_nav_getinvolved: true
 ---
 {{> header header__nav=true }}
 
+{{> hero
+    hero__classes=false
+    hero__pretitle="Real Help Doncaster"
+    hero__title="Get involved"
+    hero__subtitle=false
+    hero__body=false
+    hero__button__text=false
+}}
+
 <div id="main">
   <div class="section">
     <div class="container">
