--- a/templates/src/pages/page-howitworks.hbs
+++ b/templates/src/pages/page-howitworks.hbs
@@ -6,7 +6,7 @@ header_nav_howitworks: true
 {{> header header__nav=true }}
 
 {{> hero
-    hero__classes="hero-alt"
+    hero__classes=false
     hero__pretitle="Real Help Doncaster"
     hero__title="How it works"
     hero__subtitle=false
