--- a/templates/src/pages/page-privacy.hbs
+++ b/templates/src/pages/page-privacy.hbs
@@ -4,6 +4,15 @@ layout: default
 ---
 {{> header header__nav=true }}
 
+{{> hero
+    hero__classes=false
+    hero__pretitle=false
+    hero__title="Privacy Policy"
+    hero__subtitle=false
+    hero__body=false
+    hero__button__text=false
+}}
+
 <div id="main">
   <div class="section">
     <div class="container">
