Add Hero to Stories

--- a/hugo/layouts/stories/single.html
+++ b/hugo/layouts/stories/single.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
 {{ partial "header.html" .Params.header }}
+{{ partial "hero.html" .Params.hero }}
 
 <div id="main">
   <article class="section casestudy">
