--- a/templates/src/_components/hero/_hero.scss
+++ b/templates/src/_components/hero/_hero.scss
@@ -74,7 +74,7 @@
   display: block;
   font-size: 30px;
 
-  .hero-alt & {
+  .home-hero & {
     color: $color-white;
   }
 }
@@ -84,7 +84,7 @@
   display: block;
   font-size: 60px;
 
-  .hero-alt & {
+  .home-hero & {
     color: $color-rh-yellow;
   }
 }
