--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -5,14 +5,15 @@ header_nav_home: true
 ---
 {{> header header__nav=true }}
 
+<div class="home-hero">
 {{> hero
-    hero__classes="hero-alt"
     hero__pretitle=false
     hero__title="Real Help Doncaster"
     hero__subtitle=false
     hero__body="A local fund that helps homeless and vulnerable people off the street and into a healthier and safer lifestyle."
     hero__button__text="Donate and make a change"
 }}
+</div>
 
 <div id="main">
   <section class="section home-intro">
