--- a/hugo/layouts/index.html
+++ b/hugo/layouts/index.html
@@ -1,6 +1,8 @@
 {{ define "main" }}
 {{ partial "header.html" .Params.header }}
+<div class="home-hero">
 {{ partial "hero.html" .Params.hero }}
+</div>
 
 <div id="main">
 
