How to apply style and content matches live

--- a/templates/src/pages/page-howtoapply.hbs
+++ b/templates/src/pages/page-howtoapply.hbs
@@ -18,37 +18,27 @@ header_nav_howtoapply: true
   <div class="section">
     <div class="container">
       <div class="content">
-        <p class="body-lg"><strong>If you are sleeping rough and want to apply for funds to help you get off the street, get in touch with one of our partner organisations who will work with you to apply for funds on your behalf:</strong></p>
+        <p><strong>If you think this support can help you and you want to apply for funds, get in touch with one of our partner organisations who will work with you to apply:</strong></p>
+        <p>APPLICATIONS WILL BE OPEN IN EARLY DECEMBER</p>
+        <hr>
         <ul class="list-flex font-weight-bold">
-          <li><a href="#" target="_blank">Barnabus</a></li>
-          <li><a href="#" target="_blank">Big Issue North</a></li>
-          <li><a href="#" target="_blank">Boaz Trust</a></li>
-          <li><a href="#" target="_blank">Booth Centre</a></li>
-          <li><a href="#" target="_blank">Centrepoint North</a></li>
-          <li><a href="#" target="_blank">Change4Good</a></li>
-          <li><a href="#" target="_blank">Coffee4Craig</a></li>
-          <li><a href="#" target="_blank">Cornerstone</a></li>
-          <li><a href="#" target="_blank">Just Life</a></li>
-          <li><a href="#" target="_blank">Lifeshare</a></li>
-          <li><a href="#" target="_blank">Manchester City of Sanctuary</a></li>
-          <li><a href="#" target="_blank">MASH</a></li>
-          <li><a href="#" target="_blank">MCC Rough Sleeper Team</a></li>
-          <li><a href="#" target="_blank">Mens Room</a></li>
-          <li><a href="#" target="_blank">Mustard Tree</a></li>
-          <li><a href="#" target="_blank">On The Out</a></li>
-          <li><a href="#" target="_blank">Reach Out to the Community</a></li>
-          <li><a href="#" target="_blank">Riverside</a></li>
-          <li><a href="#" target="_blank">Shelter</a></li>
+          <li><a href="http://www.aspire.community/" target="_blank">Aspire</a></li>
+          <li><a href="https://www.changing-lives.org.uk/services/" target="_blank">Changing Lives</a></li>
+          <li><a href="http://doncastermind.org.uk/" target="_blank">Doncaster Mind </a></li>
+          <li><a href="https://urcyorkshire.org.uk/churchfinder/churches/hall-gate-urc/" target="_blank">Hall Gate United Reform Church</a></li>
+          <li><a href="https://www.riverside.org.uk/care-and-support/" target="_blank">Riverside</a></li>
+          <li><a href="https://www.stlegerhomes.co.uk/looking-for-a-home/housing-options-and-homelessness/" target="_blank">St Ledger</a></li>
         </ul>
       </div>
     </div>
   </div>
 
-  <section class="section">
+  <section class="section bg-rh-grey-light">
     <div class="container">
       <div class="content">
-        <h3>Want to become a Partner?</h3>
-        <p>If your organisation provides a service to support people who are homeless in Wigan & Leigh and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <strong><a href="#">0000 000 000</a></strong> or email <strong><a href="#">realchange@realchange.com</a></strong></p>
+        <h3>Become a Partner?</h3>
+        <p>If your organisation provides support to people who are homeless or at risk of becoming homeless in Doncaster and you would like to discuss how to become an approved Real Help partner to contribute to the action group and access the application process, please contact us at:</p>
+        <p>Email: <strong><a href="#">info@realhelpdoncaster.org</a></strong></p>
       </div>
     </div>
   </section>
