--- a/hugo/layouts/section/how-to-apply.html
+++ b/hugo/layouts/section/how-to-apply.html
@@ -14,7 +14,7 @@
     </div>
   </div>
 
-  <section class="section">
+  <section class="section bg-rh-grey-light">
     <div class="container">
       <div class="content">
         <h3>{{ .Params.partners.heading }}</h3>
