Add hashtag to footer

--- a/templates/src/_components/footer/footer.hbs
+++ b/templates/src/_components/footer/footer.hbs
@@ -9,7 +9,7 @@
       <div class="footer-body">
         {{#if footer__body}}
         <h3 class="footer-body-title">Other ways you can help</h3>
-        <p>Share us on <a href="#" target="_blank">Facebook</a> and <a href="#" target="_blank">Twitter</a></p>
+        <p>Share us on <a href="#" target="_blank">Facebook</a> and <a href="#" target="_blank">Twitter</a> #realhelpDN</p>
         <p>Arrange a fundraising event and link to our <a href="#" target="_blank">justgiving campaign</a></p>
         <p>Find out how your business or workplace can become a <a href="#">Real Help Partner</a></p>
         {{/if}}
