--- a/templates/src/pages/page-howtoapply.hbs
+++ b/templates/src/pages/page-howtoapply.hbs
@@ -19,7 +19,7 @@ header_nav_howtoapply: true
     <div class="container">
       <div class="content">
         <p><strong>If you think this support can help you and you want to apply for funds, get in touch with one of our partner organisations who will work with you to apply:</strong></p>
-        <p>APPLICATIONS WILL BE OPEN IN EARLY DECEMBER</p>
+        <p><strong>APPLICATIONS WILL BE OPEN IN EARLY DECEMBER</strong></p>
         <hr>
         <ul class="list-flex font-weight-bold">
           <li><a href="http://www.aspire.community/" target="_blank">Aspire</a></li>
