Update Get Involved and Privacy pages

--- a/templates/src/pages/page-content.hbs
+++ b/templates/src/pages/page-content.hbs
@@ -33,11 +33,11 @@ layout: default
     </div>
   </div>
 
-  <section class="section">
+  <section class="section bg-rh-grey-light">
     <div class="container">
       <div class="content">
-        <h3>Want to become a Partner?</h3>
-        <p>If your organisation provides a service to support people who are homeless in Wigan & Leigh and you would like to discuss how to become an approved Real Help partner please contact the Real Change Secretary on <strong><a href="#">0000 000 000</a></strong> or email <strong><a href="#">realchange@realchange.com</a></strong></p>
+        <h3>Heading level 3</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique reprehenderit incidunt ducimus velit id, obcaecati quisquam voluptatum iure. <a href="#">Accusamus, eum</a>.</p>
       </div>
     </div>
   </section>
