--- a/templates/src/pages/page-getinvolved.hbs
+++ b/templates/src/pages/page-getinvolved.hbs
@@ -18,27 +18,33 @@ header_nav_getinvolved: true
   <div class="section">
     <div class="container">
       <div class="content">
-        <h2>Sub head goes here</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <a class="button button-primary d-block d-sm-inline-block" href="#">Button</a>
+        <h2>Do you want to get involved in Real Help Doncaster?</h2>
+        <p>Whether your interested in getting involved personally, on behalf of your community group, workplace or college, or as a business, there are many ways you can help.</p>
+        <p>As well as donating directly to the fund, you might want to:</p>
+        <ul>
+          <li>Do a fundraising challenge</li>
+          <li>Invite our partners to speak at an event you are having</li>
+          <li>Play a role in organising Real Help Campaign activities</li>
+          <li>Share your skills or knowledge</li>
+        </ul>
+        <p>Together we can make a change, so if you want to support Real Help in Doncaster, please <a href="mailto:info@realhelpdoncaster.org" target="_blank">get in touch</a></p>
       </div>
     </div>
   </div>
 
-  <section class="section">
+  <section class="section bg-rh-grey-light">
     <div class="container">
       <div class="content">
-        <h2>Section title</h2>
+        <h2>Real Help Doncaster</h2>
         <div class="getinvolved-section">
           <div class="getinvolved-section-body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>To end homelessness in our area we will need to work together.</p>
+            <p>For a more comprehensive list of support available in Doncaster please visit:</p>
+            <p><a href="https://www.yourlifedoncaster.co.uk/s4s/WhereILive/Council?pageId=7&amp;lockLA=True" target="_blank">Your Life Doncaster </a></p>
           </div>
-          <div class="getinvolved-section-media aspect aspect-4by3">
+          {{!-- <div class="getinvolved-section-media aspect aspect-4by3">
             <img alt="" src="assets/uploads/blank-4by3.png">
-          </div>
+          </div> --}}
         </div>
       </div>
     </div>
