--- a/templates/src/pages/page-privacy.hbs
+++ b/templates/src/pages/page-privacy.hbs
@@ -17,23 +17,45 @@ layout: default
   <div class="section">
     <div class="container">
       <div class="content">
-        <h1>Privacy Policy</h1>
-        <p class="body-lg">This could be the Privacy Policy or any other simple content page.</p>
-        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <h2>Heading level 2</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique reprehenderit incidunt ducimus velit id, obcaecati quisquam voluptatum iure. Accusamus, eum.</p>
-        <p>Ad tempore omnis, totam sit, nostrum enim excepturi. Recusandae dignissimos at id eaque dolore voluptates, laborum aperiam cupiditate illum similique cum exercitationem!</p>
+        <p>No personal information is collected through this website, but your privacy still matters to us.</p>
+        <p><strong>Data Processing and Security</strong></p>
+        <p>All communication between your browser and our website is hosted in a secure UK based data centre and the software used is kept up-to-date.</p>
+        <p><strong>Links to Third Party Sites</strong></p>
+        <p>This website contains links to other websites (“Third Party Sites”). We are not responsible for the privacy practices of these other sites. If you follow a link and leave this website it’s advisable to read the privacy statements of any website that collects personally identifiable information.</p>
+        <p><strong>Cookies</strong></p>
+        <p>Like all websites, this site uses cookies. These track use of the site and give you the best user experience. A cookie is a small file, which asks for permission to be placed on your computer hard drive. You can turn off cookies and any website tracking within your web browser by going to internet options – privacy.</p>
+        <p><strong>Your Rights</strong></p>
+        <p>You are entitled to see any information held about you and may request any necessary changes to ensure that it is accurate and kept up-to-date. Please contact info@realhelpdoncaster.org to do so.</p>
+        <p><strong>Breach of Privacy</strong></p>
+        <p>If for any reason you believe that your privacy has been breached through the use of this site, please let us know immediately by emailing info@realhelpdoncaster.org, and we will promptly determine and correct the problem.</p>
+        <p><strong>Policy updates</strong></p>
+        <p>We will keep this policy up to date. Please contact us if you want to discuss any information contained here.</p>
+        <p><strong>Usage tracking</strong></p>
+        <p>Like millions of other websites, Real Help uses Google Analytics to help us see which areas of the site our visitors are using. From this information, we can make informed choices on how to improve the site.</p>
+        <p><strong>What does Google Analytics record?</strong></p>
+        <ul>
+          <li>What website you came from to get here.</li>
+          <li>How long you stay for.</li>
+          <li>What kind of computer you’re using.</li>
+        </ul>
+        <p>And quite a bit more.</p>
+        <hr>
+        <p><strong>What do we do with your data?</strong></p>
+        <p>The tracking information allows us to better understand the kind of people who come to the site, and what content they’re reading. This allows us to make better decisions on the areas that may need more research and content.</p>
+        <p>Occasionally, we will compile aggregate statistics about the number of visitors this site receives and browsers being used. No personally identifying data is included in this type of reporting.</p>
+        <p>All of our activity falls within the bounds of the Google Analytics Terms of Service.</p>
+        <p><strong>I don’t want to tracked</strong></p>
+        <p>If you would prefer not to provide this data, you can opt out of Google’s advertising tracking cookie or use a browser plugin to opt out of all Google Analytics tracking software.</p>
       </div>
     </div>
   </div>
 
-  <section class="section">
+  <section class="section bg-rh-grey-light">
     <div class="container">
       <div class="content">
         <h3>Want to become a Partner?</h3>
-        <p>If your organisation provides a service to support people who are homeless in Wigan & Leigh and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <strong><a href="#">0000 000 000</a></strong> or email <strong><a href="#">realchange@realchange.com</a></strong></p>
+        <p>If your organisation provides support to people who are homeless in Doncaster and you would like to discuss how to become an approved Real Help partner, please contact us at:</p>
+        <p>Email: <strong><a href="mailto:info@realhelpdoncaster.org">info@realhelpdoncaster.org</a></strong></p>
       </div>
     </div>
   </section>
