--- a/hugo/layouts/section/get-involved.html
+++ b/hugo/layouts/section/get-involved.html
@@ -14,7 +14,7 @@
   </div>
 
   {{ if .Params.section }}
-  <section class="section">
+  <section class="section bg-rh-grey-light">
     <div class="container">
       <div class="content">
         <h2>{{ .Params.section.heading }}</h2>
