--- a/hugo/layouts/section/privacy.html
+++ b/hugo/layouts/section/privacy.html
@@ -14,7 +14,7 @@
   </div>
 
   {{ if .Params.partners }}
-  <section class="section">
+  <section class="section bg-rh-grey-light">
     <div class="container">
       <div class="content">
         <h3>{{ .Params.partners.heading }}</h3>
