--- a/templates/src/pages/page-howitworks.hbs
+++ b/templates/src/pages/page-howitworks.hbs
@@ -15,86 +15,75 @@ header_nav_howitworks: true
 }}
 
 <div id="main">
-  <div class="section">
+  <div class="section howitworks-intro">
     <div class="container">
       <div class="content text-center">
-        <p class="body-lg"><strong>Real change is a fund for Wigan &amp; Leigh that pays for items that local people need to get off and stay off the street.</strong></p>
+        <p class="body-lg"><strong>The Real Help Doncaster campaign is designed to bring together people experiencing homelessness, our community, service providers, charities, grassroots groups, our council, local businesses and individuals with the ambition to end Homelessness in Doncaster.</strong></p>
         <a class="button button-primary d-block d-sm-inline-block mb-sm mt-md" href="#">Donate and make a real change</a>
       </div>
     </div>
   </div>
 
-  <div class="section">
+  <div class="section howitworks-where">
     <div class="container">
-      <div class="content">
-        <div class="howitworks-stats">
-          <div class="howitworks-stats-body">
-            <h2>Where does the money go?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class="stats">
-              <div class="stat">
-                <div class="stat-img">
-                  <img alt="85%" src="assets/uploads/howitworks-stat-85.png">
-                </div>
-                <div class="stat-body">
-                  <p><strong class="stat-count">85% </strong> Goes to the individual</p>
-                </div>
+      <div class="howitworks-stats">
+        <div class="howitworks-stats-body">
+          <h2>Where does the money go?</h2>
+          <p>For every £1 donated, 95p goes directly to helping someone looking for support, and not a penny on the Campaign. This is because the Real Help partners have committed the time and energy of their teams to help support the campaign.</p>
+          <div class="stats">
+            <div class="stat">
+              <div class="stat-img">
+                <img alt="85%" src="assets/uploads/howitworks-stat-95.png">
               </div>
-              <div class="stat">
-                <div class="stat-img">
-                  <img alt="10%" src="assets/uploads/howitworks-stat-10.png">
-                </div>
-                <div class="stat-body">
-                  <p><strong class="stat-count">10% </strong>  Goes to the running of Real Change</p>
-                </div>
+              <div class="stat-body">
+                <p><strong class="stat-count">95% </strong> Goes to the individual via the personal application process</p>
               </div>
-              <div class="stat">
-                <div class="stat-img">
-                  <img alt="5%" src="assets/uploads/howitworks-stat-5.png">
-                </div>
-                <div class="stat-body">
-                  <p><strong class="stat-count">5% </strong> Goes to Just Giving</p>
-                </div>
+            </div>
+            <div class="stat">
+              <div class="stat-img">
+                <img alt="10%" src="assets/uploads/howitworks-stat-5.png">
+              </div>
+              <div class="stat-body">
+                <p><strong class="stat-count">5% </strong> Goes to Just Giving for administering donations</p>
               </div>
             </div>
           </div>
-          <div class="howitworks-stats-media aspect aspect-1by1">
-            <img alt="" src="assets/uploads/howitworks-stats.png">
-          </div>
+        </div>
+        <div class="howitworks-stats-media aspect aspect-1by1">
+          <img alt="" src="assets/uploads/howitworks-stats.png">
         </div>
       </div>
     </div>
   </div>
 
-  <section class="section">
+  <section class="section bg-rh-grey-light">
     <div class="container">
       <div class="content">
-        <h3>How will my donation be spent?</h3>
-        <p>Your donation joins the central Real Change funding pot. <strong><a href="#">Local charities</a></strong> and organisations work directly with individuals who are homeless, and apply for funds to pay for items they need. Depending on the amount needed, there are two levels of fund requests:</p>
+        <h3>How will my donation be distributed?</h3>
+        <p>Real Help Doncaster is a local campaign to help homeless and vulnerable people off the streets and into a healthier and safer lifestyle. The funds donated and raised can be distributed in two ways.</p>
+        <p>There are two types of application:</p>
         <div class="cards cards-2up">
           <div class="card bg-white">
             <div class="card-header bg-rh-black text-white">
               <h3 class="card-title">Under £100</h3>
-              <p><strong>(e.g. Education or training courses, furniture or househould items, clothes for interviews)</strong></p>
+              <p><strong>(e.g. Education or training courses, essential household items, clothes for interviews)</strong></p>
             </div>
             <div class="card-body">
-              <p>If the request is for under £100, Real Change partner agencies can submit an online application.</p>
-              <p>This excludes cash, emergency accommodation, food or other items which are available for free elsewhere.</p>
+              <p>If the request is for under £100, applications which meet the criteria are approved almost immediately via the organisation who are supporting with the application.</p>
             </div>
           </div>
           <div class="card bg-white">
             <div class="card-header bg-rh-black text-white">
               <h3 class="card-title">Over £100</h3>
-              <p><strong>(e.g. Deposit or rent, furnishings for a flat, white goods over £100)</strong></p>
+              <p><strong>(e.g. Skills training, furnishings for a flat, or larger white goods such as a fridge or washing machine)</strong></p>
             </div>
             <div class="card-body">
-              <p>If the request is for over £100, the application must be agreed by the Real Change panel.</p>
-              <p>The Real Change panel includes: Lorem ipsum dolor sit amet, lorem ipsum dolor sit amet, lorem ipsum dolor sti amet.</p>
+              <p>If the request is for over £100, the application must be agreed by the Real Help Doncaster independent panel. The Panel includes people with lived experience of homelessness alongside representatives of support groups and accommodation providers.</p>
             </div>
           </div>
         </div>
         <div class="text-center mt-sm">
-          <a class="button button-primary d-block d-sm-inline-block mb-sm" href="#">Donate and make a real change</a>
+          <a class="button button-primary d-block d-sm-inline-block mb-sm" href="#">Change the way you GIVE here</a>
         </div>
       </div>
     </div>
