--- a/templates/src/css/sass/pages/howitworks.scss
+++ b/templates/src/css/sass/pages/howitworks.scss
@@ -1,10 +1,24 @@
 // How it Works
 //
 
+.howitworks-intro {
+  padding-bottom: 2rem;
+
+  .content {
+
+  }
+}
+
+.howitworks-where {
+  margin-left: 0.625rem;
+  margin-right: 0.625rem;
+  padding-top: 0;
+}
+
 .howitworks-stats {
   align-items: flex-start;
-  
-  @include media-breakpoint-up(sm) {
+
+  @include media-breakpoint-up(md) {
     display: flex;
   }
 }
@@ -16,8 +30,11 @@
 .howitworks-stats-media {
   align-self: flex-end;
   margin-top: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 280px;
 
-  @include media-breakpoint-up(sm) {
+  @include media-breakpoint-up(md) {
     height: 320px;
     margin-left: 1em;
     margin-top: 0;
